--- a/feature_app/src/main/AndroidManifest.xml
+++ b/feature_app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".SignUpActivity">
         </activity>
+        <activity android:name=".MainScreenActivity">
+        </activity>
     </application>
 
 </manifest>
