--- a/feature_app/build.gradle
+++ b/feature_app/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation project(':base')
     testImplementation 'junit:junit:4.12'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
