--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,11 @@ dependencies {
 
 
     implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
 
     implementation('com.google.firebase:firebase-core:16.0.6') {
         exclude module: 'support-media-compat'
@@ -50,4 +53,6 @@ dependencies {
     }
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-media-compat:28.0.0'
+
+    apply plugin: 'com.google.gms.google-services'
 }
