--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
             android:allowBackup="true"
@@ -31,6 +32,8 @@
         <activity android:name=".SignUpActivity">
         </activity>
         <activity android:name=".MainScreenActivity">
+        </activity>
+        <activity android:name=".UploadActivity">
         </activity>
     </application>
 
