--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
-    implementation 'com.google.firebase:firebase-core:16.0.4'
 
     implementation('com.google.firebase:firebase-core:16.0.6') {
         exclude module: 'support-media-compat'
@@ -53,6 +51,6 @@ dependencies {
     }
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
-    apply plugin: 'com.google.gms.google-services'
 }
