--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         </activity>
         <activity android:name=".FormularyActivity">
         </activity>
+        <activity android:name=".DemandDetailActivity">
+        </activity>
     </application>
 
 </manifest>
